Clean-up + add documentation generation
